fixed spacing - about

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -33,7 +33,7 @@ h2 {
 .textdiv {
     width: 60%;
     display: inline-block;
-    margin: 1vh 0 0 3vw;
+    margin: 0 0 0 2vw;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.25em;
 }
